--- a/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -142,7 +142,6 @@ LastLevel=/Game/Final/Levels/TestingArea
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Final/Blueprint/Boss/BP_Following_Boss.BP_Following_Boss
 
 [DetailCategories]
 PaperTileMapActor.TransformCommon=True
@@ -2389,6 +2388,7 @@ MeshBuilder.TimeStamp=2018.10.01-03.52.50
 MeshBuilder.LastCompileMethod=Unknown
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Final/Blueprint/Boss/BP_Following_Boss.BP_Following_Boss;
 RecentlyPlaced=/Game/Final/Blueprint/Tentacles/BP_Tentacle_2.BP_Tentacle_2;
 RecentlyPlaced=/Game/Final/Blueprint/Tentacles/BP_Tentacle_1.BP_Tentacle_1;
@@ -2408,29 +2408,28 @@ RecentlyPlaced=/Game/Final/Sprites/Trees/islandtrees3_Sprite_0.islandtrees3_Spri
 RecentlyPlaced=/Game/Final/Sprites/Trees/islandtrees3_Sprite_1.islandtrees3_Sprite_1;
 RecentlyPlaced=/Game/Final/Sprites/Trees/isnlandstrees_Sprite_0.isnlandstrees_Sprite_0;
 RecentlyPlaced=/Game/Final/Sprites/Trees/islandtree2_Sprite_0.islandtree2_Sprite_0;
-RecentlyPlaced=/Game/Final/Sprites/Platforms/health_container.health_container;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Final/Blueprint/Boss/BP_Following_Boss
-MRUItem1=/Game/Final/Blueprint/Tentacles/BP_LargeTentacle
-MRUItem2=/Game/Final/Blueprint/Tentacles/BP_SmallTentacle
-MRUItem3=/Game/Final/Flipbook/Assets/FB_SmallTentacle
-MRUItem4=/Game/Final/Blueprint/Tentacles/BP_Tentacle_6
-MRUItem5=/Game/Final/Blueprint/Tentacles/BP_Tentacle_5
-MRUItem6=/Game/Final/Blueprint/Tentacles/BP_Tentacle_4
-MRUItem7=/Game/Final/Blueprint/Tentacles/BP_Tentacle_3
-MRUItem8=/Game/Final/Blueprint/Tentacles/BP_Tentacle_2
-MRUItem9=/Game/Final/Blueprint/Tentacles/BP_Tentacle_1
-MRUItem10=/Game/Final/Blueprint/BP_Maincharacter
-MRUItem11=/Game/Final/Sprites/Tentacles/tentacle1_Sprite_0
-MRUItem12=/Game/Final/Sprites/Tentacles/tentaclearchlarge_Sprite_0
-MRUItem13=/Game/Final/Sprites/Tentacles/tentacle_ground1_Sprite_0
-MRUItem14=/Game/Final/Sprites/Tentacles/tentacle_ground1
-MRUItem15=/Game/Final/Sprites/Trees/islandtree2_Sprite_0
-MRUItem16=/Game/Final/Sprites/Trees/islandtrees3_Sprite_0
-MRUItem17=/Game/Final/Levels/GameLevel
-MRUItem18=/Game/Final/Levels/MainGame
-MRUItem19=/Game/Final/Blueprint/BP_Homing_Enemy
+MRUItem0=/Game/Final/Blueprint/Assets/BP_RNG_Box
+MRUItem1=/Game/Final/Blueprint/Assets/BP_Healing_Box
+MRUItem2=/Game/Final/Blueprint/BP_Maincharacter
+MRUItem3=/Game/Final/Blueprint/Assets/BP_Damage_Box
+MRUItem4=/Game/Final/Blueprint/Boss/BP_Following_Boss
+MRUItem5=/Game/Final/Blueprint/Tentacles/BP_LargeTentacle
+MRUItem6=/Game/Final/Blueprint/Tentacles/BP_SmallTentacle
+MRUItem7=/Game/Final/Flipbook/Assets/FB_SmallTentacle
+MRUItem8=/Game/Final/Blueprint/Tentacles/BP_Tentacle_6
+MRUItem9=/Game/Final/Blueprint/Tentacles/BP_Tentacle_5
+MRUItem10=/Game/Final/Blueprint/Tentacles/BP_Tentacle_4
+MRUItem11=/Game/Final/Blueprint/Tentacles/BP_Tentacle_3
+MRUItem12=/Game/Final/Blueprint/Tentacles/BP_Tentacle_2
+MRUItem13=/Game/Final/Blueprint/Tentacles/BP_Tentacle_1
+MRUItem14=/Game/Final/Sprites/Tentacles/tentacle1_Sprite_0
+MRUItem15=/Game/Final/Sprites/Tentacles/tentaclearchlarge_Sprite_0
+MRUItem16=/Game/Final/Sprites/Tentacles/tentacle_ground1_Sprite_0
+MRUItem17=/Game/Final/Sprites/Tentacles/tentacle_ground1
+MRUItem18=/Game/Final/Sprites/Trees/islandtree2_Sprite_0
+MRUItem19=/Game/Final/Sprites/Trees/islandtrees3_Sprite_0
 
 [AssetEditorToolkitTabLocation]
 /Game/Final/Sprites/Trees/SpriteSheet_Trees_Sprite_0.SpriteSheet_Trees_Sprite_0=1
