--- a/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -114,7 +114,7 @@ MRUItem6=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Final
 ContentBrowserTab1.SelectedPaths=/Game/Final/Sprites/Tentacles
-ContentBrowserTab1.SelectedPaths=/Game/Final/Blueprint/Boss
+ContentBrowserTab1.SelectedPaths=/Game/Final/Blueprint/Assets
 None=======
 None=======
 ContentBrowserTab1.SourcesExpanded=True
@@ -141,7 +141,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/Final/Levels/TestingArea
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 
 [DetailCategories]
 PaperTileMapActor.TransformCommon=True
@@ -1738,11 +1738,11 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=E:/Github/Project-Final/Finals/Content/Final/Levels
+UNR=../../../../../../Users/l_war/OneDrive/Documents/Github/project_final_2/Project-Final/Finals/Content/Final/Levels
 BRUSH=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
 FBX=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
 FBXAnim=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
-GenericImport=../../../../../../Finals/Opto/islandtree2.png
+GenericImport=../../../../../../Users/l_war/OneDrive/Documents/Github/project_final_2/Project-Final/Finals/areyoumymom.wav
 GenericExport=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
 GenericOpen=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
 GenericSave=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/
